--- a/Assembler Queuer/Assembler Queuer.csproj
+++ b/Assembler Queuer/Assembler Queuer.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{201D059F-71CF-42ED-93C5-CA70BD60BDCA}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <RootNamespace>IngameScript</RootNamespace>
-    <AssemblyName>Autopilot</AssemblyName>
+    <AssemblyName>Assembler Queuer</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
